--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
 <ol>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://cookingfromheart.com/dappalam-gummadikaya-pulusu-andhra-mukkala-pulusu/">Dapalam Soup</a>........................₹299</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://cookingfromheart.com/dappalam-gummadikaya-pulusu-andhra-mukkala-pulusu/" target="_blank">Dapalam Soup</a>........................₹299</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://www.youtube.com/watch?v=wImmwgUVUvY">Mungaku Shorba</a>....................₹299</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://www.youtube.com/watch?v=wImmwgUVUvY" target="_blank">Mungaku Shorba</a>....................₹299</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://vismaifood.com/en/easy-pepper-rasam-miriyala-charu-how-make-pepper-rasam-5minutes-quick-and-easy-recipe">Miryala Rasam</a>.......................₹299</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://vismaifood.com/en/easy-pepper-rasam-miriyala-charu-how-make-pepper-rasam-5minutes-quick-and-easy-recipe" target="_blank">Miryala Rasam</a>.......................₹299</pre>
        </li>
 </ol>
 <h3 style="color: #50394c;">NON-VEG</h3>
 <ol type="A">
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://www.cupcakeree.com/blog/murgh-ka-shorba-indian-style-clear-chicken-soup">Murgh Dhaniya Shorba</a>.........₹399</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://www.cupcakeree.com/blog/murgh-ka-shorba-indian-style-clear-chicken-soup" target="_blank">Murgh Dhaniya Shorba</a>.........₹399</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Paya_(food)">Paya Shorba</a>...........................₹399</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Paya_(food)"  target="_blank">Paya Shorba</a>...........................₹399</pre>
        </li>
 </ol>
 <h2 style="color:orange;"><u><center>STATERS</h2></u>
@@ -44,30 +44,30 @@
 <ol type="i">
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Paneer_tikka">Paneer Tikka</a>........................₹299</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Paneer_tikka" target="_blank">Paneer Tikka</a>........................₹299</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Pakora">Cabbage Pakora</a>...................₹299</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Pakora" target="_blank">Cabbage Pakora</a>...................₹299</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Baby_corn">Chilli Baby Corn</a>...................₹299</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Baby_corn" target="_blank">Chilli Baby Corn</a>...................₹299</pre>
        </li>
 </ol>
 <h3 style="color: #50394c;">Non-VEG</h3>
 <ol type="I">
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Tandoori_chicken">Chicken Tandoori</a>................₹399</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Tandoori_chicken" target="_blank">Chicken Tandoori</a>................₹399</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Apollo_sharkminnow">Apollo Fish</a>...........................₹499</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Apollo_sharkminnow" target="_blank">Apollo Fish</a>...........................₹499</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Goat_meat">Mutton Appetizers</a>...............₹499</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Goat_meat" target="_blank">Mutton Appetizers</a>...............₹499</pre>
        </li>
 </ol>
 <h2 style="color:orange;"><u>
@@ -77,30 +77,30 @@
 <ul>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Paneer">Paneer Biryani</a>................................₹499</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Paneer" target="_blank">Paneer Biryani</a>................................₹499</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://commons.wikimedia.org/wiki/File:Veg_Kaju_Biryani.jpg">Kajju Biryani</a>..................................₹499</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://commons.wikimedia.org/wiki/File:Veg_Kaju_Biryani.jpg" target="_blank">Kajju Biryani</a>..................................₹499</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Template:Mixed_vegetable_biryani">Hyderabad veg Biryani</a>..................₹599</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Template:Mixed_vegetable_biryani" target="_blank">Hyderabad veg Biryani</a>..................₹599</pre>
        </li>
 </ul>
 <h3 style="color: #50394c;">Non-VEG</h3>
 <ul type="square">
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Hyderabadi_biryani">Chicken Biryani</a>.............................₹699</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Hyderabadi_biryani" target="_blank">Chicken Biryani</a>.............................₹699</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Mutton_pulao">Mutton Biryani</a>..............................₹899</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Mutton_pulao" target="_blank">Mutton Biryani</a>..............................₹899</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://commons.wikimedia.org/wiki/File:Fish_Biryani.JPG">Fish Biryani</a>...................................₹799</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://commons.wikimedia.org/wiki/File:Fish_Biryani.JPG" target="_blank">Fish Biryani</a>...................................₹799</pre>
        </li>
        <h2 style="color:orange;"><u>
         <center>DESSERTS
@@ -108,15 +108,15 @@
  <ul type="circle">
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Gulab_jamun">Gulab Jamun</a>...............................₹199</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Gulab_jamun" target="_blank">Gulab Jamun</a>...............................₹199</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Ras_malai">Ras Malai</a>..................................₹199</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Ras_malai" target="_blank">Ras Malai</a>..................................₹199</pre>
        </li>
        <li>
               <pre
-                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Ice_cream">Ice Cream</a>..................................₹199</pre>
+                     style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://en.wikipedia.org/wiki/Ice_cream" target="_blank">Ice Cream</a>..................................₹199</pre>
        </li>
 </ul>
 </body>
